--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,5 +34,5 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password:  ${{ secrets.DOCKER_HUB_PASSWORD }}
-        repository: dockerHubUser/dockerHubRepository
+        repository: jovisimons/drinkservice
         tags: ${{github.run_number}}
