--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,10 +29,15 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
-    - name: Publish to Docker Hub
-      uses: docker/build-push-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password:  ${{ secrets.DOCKER_HUB_PASSWORD }}
-        repository: jovisimons/drinkservice
-        tags: ${{github.run_number}}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+          push: true
+          tags: jovisimons/dekeet-drinkservice:${{github.run_number}}
