--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,10 +3,10 @@ name: Java CI with Maven
 on:
   push:
     branches:
-      - "master"
+      - master
   pull_request:
     branches:
-      - "master"
+      - master
 
 jobs:
   build:
@@ -23,15 +23,10 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
+    - name: Publish to Docker Hub
+      uses: docker/build-push-action@v1
       with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-          push: true
-          tags: jovisimons/dekeet-drinkservice:${{github.run_number}}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        repository: jovisimons/dekeet-drinkservice
+        tags: ${{github.run_number}}
