--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.data.mongodb.auto-index-creation=true
 spring.data.mongodb.host=host.docker.internal
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=drink
+spring.data.mongodb.database=dekeet_drink
 
 server.port=8091
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
